--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "bootstrap": "~2.3.2",
     "angular-bootstrap": "~0.3.0",
     "angular-ui-router": "~0.0.1",
-    "angular-ui-utils": "~0.0.3"
+    "angular-ui-utils": "~0.0.3",
+    "angular-resource": "1.0.8"
   },
   "dependencies": {}
 }
