--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-coffeelint": "0.0.6",
     "grunt-conventional-changelog": "~0.1.1",
     "grunt-bump": "0.0.6",
-    "grunt-contrib-jade": "~0.11.0"
+    "grunt-contrib-jade": "~0.11.0",
+    "grunt-contrib-connect": "~0.7.1"
   }
 }
